<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bohac.matej.pocasieproject.fragments.AboutInfoFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAuthor"
                android:text="@string/author"
                android:textSize="50sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSkupina"
                android:text="@string/skupina"
                android:textSize="30sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEmail"
                android:text="@string/email"
                android:textSize="30sp"
                android:padding="10dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:background="@drawable/anderoid"
            android:padding="10dp"
            />

    </LinearLayout>

</FrameLayout>
