<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffb2ff87">

    <TextView
        android:text="@string/title"
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCity"
            android:text="@string/city"
            android:textSize="30sp"
            android:padding="10dp"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextCity"
            android:inputType="text"
            android:padding="10dp"
            android:layout_weight="8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonWeather"
            android:text="@string/weather"
            android:textSize="30sp"
            android:padding="10dp"
            android:layout_weight="1"
            android:onClick="onClickWeather"/>
    </LinearLayout>

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentWeatherData"
        class="bohac.matej.pocasieproject.fragments.WeatherDataFragment"
        tools:layout="@layout/fragment_weather_data"
    />

    <fragment
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentWeatherInfo"
        class="bohac.matej.pocasieproject.fragments.WeatherInfoFragment"
        tools:layout="@layout/fragment_weather_info"
    />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <fragment
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragmentFooter"
            class="bohac.matej.pocasieproject.fragments.FooterFragment"
            android:layout_alignParentBottom="true"
            tools:layout="@layout/fragment_footer" />
    </RelativeLayout>


</LinearLayout>
